syntax = "proto3";

package auth_service.api;
option go_package = "github.com/BobrePatre/messenger-homework/auth-service/pkg/api/grpc/golang/auth";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


message LoginRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Login Request"
    }
  };
  string login = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Login",
    description: "Логин пользователя",
  }];
  string password = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Password",
    description: "Пароль пользователя"
  }];
}

message LoginResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Login Response"
    }
  };
  string token = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Token доступа",
    description: "Токен, который необходим для доступа к защищенным ресурсам сервера"
  }];
}

message RegisterRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Register Request"
    }
  };

  string email = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Email"
  }];
  string username = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Username"
  }];
  string password = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Password"
  }];
  string password_confirmation = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Password Confirmation",
    description: "Подтверждение пароля, должен совпадать с полем ввода пароля"
  }];

}

message RegisterResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Register Response"
    }
  };

  string token = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Token",
    description: "Токен, который необходим для доступа к защищенным ресурсам сервера"
  }];
}


